CHATS_SIT/force-app/main/default/objects/R00757__mdt.object
<CustomObject>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_start_effv__c</fullName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <label>R00757</label>
    <pluralLabel>R00757</pluralLabel>
</CustomObject>